# MLOpsAvanzado

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
01- hydra_experiments/Hidra/: decisiontree  predict.py  preprocessors.py  train_pipeline.py
01- hydra_experiments/Hidra/configs/: config_model.yaml  preprocessing.yaml
01- hydra_experiments/Makefile/: Makefile
01- hydra_experiments/Pre-commit/: isort_example.py
02-pycaret_mlops/: Fundamentos de Pycaret.ipynb  Modelos de Regresión con Pycaret.ipynb  Producción_Modelos de Regresión con Pycaret.ipynb
03-model_development/: 01-processing_data.ipynb  02-split_data.ipynb  03-baseline.ipynb  README.md  params.py  requirements.txt  torch-conda.yml  utils.py
04-model_tracking_mlflow/: README.md  duration_predictions.py  training_model_register.py
